--- a/godot-client/template.html
+++ b/godot-client/template.html
@@ -91,7 +91,7 @@ body {
 }
 
 #go { 
-	position: absolute;
+	position: fixed;
 	top: 2000px;
 	left: 0;
 	display: none;
@@ -99,7 +99,7 @@ body {
 }
 
 #go.show { 
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left:0;
 	display: block;
