--- a/template.html
+++ b/template.html
@@ -260,7 +260,7 @@ const engine = new Engine(GODOT_CONFIG);
 		var embed = new Twitch.Embed("twitch-embed", {
 			width: "100%",
 			height: "100%",
-			channel: "andoodev",
+			channel: "northernlion",
 			layout: "video",
 			autoplay: true,
 			// Only needed if this page is going to be embedded on other websites
